--- a/disclaimer.html
+++ b/disclaimer.html
@@ -7,102 +7,89 @@ https://github.com/aidswidjaja
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title>Lively | Disclaimer</title>
-  <meta name="description" content="The official website for the Lively Discord server.">
-  <meta name="author" content="aidswidjaja.github.io">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <title>Lively | Disclaimer</title>
+    <meta name="description" content="The official website for the Lively Discord server.">
+    <meta name="author" content="aidswidjaja.github.io">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <link rel="icon" type="image/png" href="favicon.ico">
-  <meta name="theme-color" content="#fafafa">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <meta name="theme-color" content="#fafafa">
 
-  <!-- CDN: Bootstrap JQuery, Popper.js | Local: JS, CSS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="js/bootstrap.js"></script>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/index.css">
+    <!-- CDN: Bootstrap JQuery, Popper.js | Local: JS, CSS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/index.css">
 
-  <!-- Background Image Randomiser courtesy of Paul Lockett https://paul-lockett.co.uk/randombackground.html REQUIRES JAVASCRIPT AND CSS-->
-  <!-- Responsive Background Image courtesy of Jennifer Kyrnin https://www.lifewire.com/responsive-background-images-3467001 REQUIRES CSS3-->
+    <!-- Background Image Randomiser courtesy of Paul Lockett https://paul-lockett.co.uk/randombackground.html REQUIRES JAVASCRIPT AND CSS-->
+    <!-- Responsive Background Image courtesy of Jennifer Kyrnin https://www.lifewire.com/responsive-background-images-3467001 REQUIRES CSS3-->
 
-  <script src="js/backgr.js"></script>
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/backgr.css">
-  <link rel="stylesheet" href="css/social/css/zocial.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+    <script src="js/backgr.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/backgr.css">
+    <link rel="stylesheet" href="css/social/css/zocial.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body id="bod">
 
-  <!-- Navbar start -->
+    <!-- Navbar start -->
 
-  <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
-    <a class="navbar-brand" href="index.html">
-      <img src="res/lively.png" width="64" height="64" alt="Lively logo">
-    </a>
+    <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
+        <a class="navbar-brand" href="index.html">
+            <img src="res/lively.png" width="64" height="64" alt="Lively logo">
+        </a>
 
-    <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       Menu
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <div class="navbar-nav">
-        <a class="navbar-brand" href="index.html">Lively</a>
-        <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
-        <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
-        <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
-        <a id="navcolour" class="nav-item nav-link active" href="#">Disclaimer<span class="sr-only">(current)</span></a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
-        <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
-        <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
-      </div>
-    </div>
-  </nav>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav">
+                <a class="navbar-brand" href="index.html">Lively</a>
+                <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
+                <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
+                <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
+                <a id="navcolour" class="nav-item nav-link active" href="#">Disclaimer<span class="sr-only">(current)</span></a>
+                <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
+                <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
+                <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
+            </div>
+        </div>
+    </nav>
 
-  <!-- Navbar end -->
+    <!-- Navbar end -->
 
-  <!--[if IE]>
+    <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <div id="page">
-    <!-- on screens less wide than lg breakpoint (as defined by Bootstrap), hide the splash div-->
-    <h1 class="display-4" id="pagetext">Disclaimer</h1>
-    <h5 class="content" id="pagetext">No-one within Lively is professionally trained. The purpose of Lively is to
-      promote mental health awareness in a free environment. By no means, we should be the last resort to anyone or
-      anyone associated with you needing Mental Health support including but not limited to acting upon hurting
-      themselves, or others. If know anyone that is thinking about harming themselves in any way, please call the United
-      States based National Suicide Prevention Lifeline at 1-800-273-8255, or your equivalent in your country or
-      municipalities. You can also view more crisis resources <a href="hotlines.html">here</a>.
-    </h5>
-  </div>
-
-
-  <!-- Footer start -->
-  <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
-        href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
-    <div class="socialnav">
-      <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
-          style="height: 50px;"></a>
-      <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png"
-          style="height: 30px;"></a>
-      <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
-          style="height: 45px;"></a>
-      <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
+    <div id="page">
+        <!-- on screens less wide than lg breakpoint (as defined by Bootstrap), hide the splash div-->
+        <h1 class="display-4" id="pagetext">Disclaimer</h1>
+        <h5 class="content" id="pagetext">No-one within Lively is professionally trained. The purpose of Lively is to promote mental health awareness in a free environment. We should not be the last resort to anyone needing Mental Health support including but not limited to acting upon
+            hurting themselves, or others. If you know anyone that is thinking about harming themselves in any way, please call the United States based National Suicide Prevention Lifeline at 1-800-273-8255, or your equivalent in your country or municipalities.
+            Lively would not be held liable for any loss caused to anyone. You can also view more crisis resources <a href="hotlines.html">here</a>.
+        </h5>
     </div>
-  </nav>
-  <!-- Footer end-->
+
+
+    <!-- Footer start -->
+    <nav class="navbar navbar-dark bg-dark">
+        <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
+        href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
+        <div class="socialnav">
+            <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png" style="height: 50px;"></a>
+            <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png" style="height: 30px;"></a>
+            <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png" style="height: 45px;"></a>
+            <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
+        </div>
+    </nav>
+    <!-- Footer end-->
 </body>
 
 </html>
