--- a/disclaimer.html
+++ b/disclaimer.html
@@ -71,9 +71,10 @@ https://github.com/aidswidjaja
     <div id="page">
         <!-- on screens less wide than lg breakpoint (as defined by Bootstrap), hide the splash div-->
         <h1 class="display-4" id="pagetext">Disclaimer</h1>
-        <h5 class="content" id="pagetext">No-one within Lively is professionally trained. The purpose of Lively is to promote mental health awareness in a free environment. We should not be the last resort to anyone needing Mental Health support including but not limited to acting upon
-            hurting themselves, or others. If you know anyone that is thinking about harming themselves in any way, please call the United States based National Suicide Prevention Lifeline at 1-800-273-8255, or your equivalent in your country or municipalities.
-            Lively would not be held liable for any loss caused to anyone. You can also view more crisis resources <a href="hotlines.html">here</a>.
+        <h5 class="content" id="pagetext">
+            No-one within Lively is professionally trained. The purpose of Lively is to promote mental health awareness in a free environment. We should not be the last resort to anyone needing Mental Health support including but not limited to acting upon hurting
+            themselves, or others. We do not provide suicide crisis support. If you know anyone that is thinking about harming themselves in any way, please call the United States based National Suicide Prevention Lifeline at 1-800-273-8255, or your equivalent
+            in your country or municipalities. Lively would not be held liable for any loss caused to anyone.<br><br> You can also view more crisis resources <a href="hotlines.html">here</a>.
         </h5>
     </div>
 
