Updated Discord invite link + mobile responsiveness update

--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@ https://github.com/aidswidjaja
 
 <body id="bod">
 
-<!-- Navbar start -->
+  <!-- Navbar start -->
 
   <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
     <a class="navbar-brand" href="index.html">
@@ -63,29 +63,31 @@ https://github.com/aidswidjaja
         <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
         <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
         <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules"
+          target="_blank">Server Rules</a>
         <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
         <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
       </div>
     </div>
   </nav>
 
-<!-- Navbar end -->
+  <!-- Navbar end -->
 
   <div class="indexjumbooof">
     <br>
     <div class="container indextextoof">
       <h1 class="mt-1 indexheader" id="oof">huh?</h1>
       <p class="indexlead" id="oof">
-        <b>404 Error: Sorry but we couldn't find that page you were looking for.</b><br>If something *is* supposed to be here, feel free to let Uproar know on Discord, thanks!
+        <b>404 Error: Sorry but we couldn't find that page you were looking for.</b><br>If something *is* supposed to be
+        here, feel free to let Uproar know on Discord, thanks!
       </p>
     </div>
   </div>
 
   <!-- Footer start -->
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
-        href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
+    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2021<br>Join us at <a
+        href="https://discord.gg/A46BgsWgjD" id="copyrightlink">discord.gg/A46BgsWgjD</a></span>
     <div class="socialnav">
       <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
           style="height: 50px;"></a>
@@ -93,7 +95,8 @@ https://github.com/aidswidjaja
           style="height: 30px;"></a>
       <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
           style="height: 45px;"></a>
-      <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
+      <a href="https://discord.gg/A46BgsWgjD"><img class="social" src="res/social/discord.svg"
+          style="height: 35px;"></a>
     </div>
   </nav>
   <!-- Footer end-->
