--- a/about.html
+++ b/about.html
@@ -63,7 +63,8 @@ https://github.com/aidswidjaja
         <a id="navcolour" class="nav-item nav-link active" href="#">About Us<span class="sr-only">(current)</span></a>
         <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
         <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules"
+          target="_blank">Server Rules</a>
         <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
         <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
       </div>
@@ -161,15 +162,16 @@ https://github.com/aidswidjaja
     </div>
     <div>
       <h1 class="aboutready">Ready to join our community?</h1><br>
-      <p style="text-align: center;"><a type="button" class="btn btn-lg btn-success joinbtn" href="https://discord.is/lively" target="_blank">Join Lively</a>
+      <p style="text-align: center;"><a type="button" class="btn btn-lg btn-success joinbtn"
+          href="https://discord.gg/A46BgsWgjD" target="_blank">Join Lively</a>
       </p>
     </div>
     <br><br>
 
     <!-- Footer start -->
     <nav class="navbar navbar-dark bg-dark">
-      <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
-          href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
+      <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2021<br>Join us at <a
+          href="https://discord.gg/A46BgsWgjD" id="copyrightlink">discord.gg/A46BgsWgjD</a></span>
       <div class="socialnav">
         <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
             style="height: 50px;"></a>
@@ -177,7 +179,8 @@ https://github.com/aidswidjaja
             style="height: 30px;"></a>
         <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
             style="height: 45px;"></a>
-        <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
+        <a href="https://discord.gg/A46BgsWgjD"><img class="social" src="res/social/discord.svg"
+            style="height: 35px;"></a>
       </div>
     </nav>
     <!-- Footer end-->
