--- a/hotlines.html
+++ b/hotlines.html
@@ -62,7 +62,8 @@ https://github.com/aidswidjaja
         <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
         <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
         <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules"
+          target="_blank">Server Rules</a>
         <a id="navcolour" class="nav-item nav-link active" href="#">Hotlines<span class="sr-only">(current)</span></a>
         <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
       </div>
@@ -111,13 +112,17 @@ https://github.com/aidswidjaja
   </p>
   <!-- Footer start -->
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020 • join us at <a
-        href="https://discord.is/lively">discord.is/lively</a></span>
+    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2021<br>Join us at <a
+        href="https://discord.gg/A46BgsWgjD" id="copyrightlink">discord.gg/A46BgsWgjD</a></span>
     <div class="socialnav">
-      <a href="http://twitter.com/livelydiscord"><img src="res/social/twitter.png" style="height: 50px;"></a>
-      <a href="http://instagram.com/livelydiscord"><img src="res/social/instagram.png" style="height: 30px;"></a>
-      <a href="https://medium.com/livelydiscord"><img src="res/social/medium.png" style="height: 45px;"></a>
-      <a href="https://discord.gg/hv7u9bT"><img src="res/social/discord.svg" style="height: 35px;"></a>
+      <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
+          style="height: 50px;"></a>
+      <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png"
+          style="height: 30px;"></a>
+      <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
+          style="height: 45px;"></a>
+      <a href="https://discord.gg/A46BgsWgjD"><img class="social" src="res/social/discord.svg"
+          style="height: 35px;"></a>
     </div>
   </nav>
   <!-- Footer end-->
