--- a/breathe.html
+++ b/breathe.html
@@ -62,7 +62,8 @@ https://github.com/aidswidjaja
         <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
         <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
         <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules"
+          target="_blank">Server Rules</a>
         <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
         <a id="navcolour" class="nav-item nav-link active" href="#">Breathe<span class="sr-only">(current)</span></a>
       </div>
@@ -87,8 +88,8 @@ https://github.com/aidswidjaja
 
   <!-- Footer start -->
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
-        href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
+    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2021<br>Join us at <a
+        href="https://discord.gg/A46BgsWgjD" id="copyrightlink">discord.gg/A46BgsWgjD</a></span>
     <div class="socialnav">
       <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
           style="height: 50px;"></a>
@@ -96,7 +97,8 @@ https://github.com/aidswidjaja
           style="height: 30px;"></a>
       <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
           style="height: 45px;"></a>
-      <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
+      <a href="https://discord.gg/A46BgsWgjD"><img class="social" src="res/social/discord.svg"
+          style="height: 35px;"></a>
     </div>
   </nav>
   <!-- Footer end-->
