--- a/disclaimer.html
+++ b/disclaimer.html
@@ -81,13 +81,13 @@ https://github.com/aidswidjaja
 
     <!-- Footer start -->
     <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
-        href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
+        <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2021<br>Join us at <a
+        href="https://discord.gg/A46BgsWgjD" id="copyrightlink">discord.gg/A46BgsWgjD</a></span>
         <div class="socialnav">
             <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png" style="height: 50px;"></a>
             <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png" style="height: 30px;"></a>
             <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png" style="height: 45px;"></a>
-            <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
+            <a href="https://discord.gg/A46BgsWgjD"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
         </div>
     </nav>
     <!-- Footer end-->
