--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ https://github.com/aidswidjaja
         <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
         <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
         <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules"
+          target="_blank">Server Rules</a>
         <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
         <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
       </div>
@@ -78,7 +79,8 @@ https://github.com/aidswidjaja
         Lively is a server based on providing assistance related to mental health. We strongly believe that the people
         who need someone to talk to definitely deserve to be treated better.
         <b>Here at Lively, we aim at listening to you and helping you out in every possible way.</b><br><br>
-        <a href="https://discord.gg/hv7u9bT" class="btn btn-lg btn-outline-dark" target="_blank" id="splashbutton">Join us on
+        <a href="https://discord.gg/A46BgsWgjD" class="btn btn-lg btn-outline-dark" target="_blank" id="splashbutton">Join
+          us on
           Discord</a>
       <p class="indexlead" style="font-size: 10px;">You need to be 13 or over to use Discord.</p>
       </p>
@@ -120,7 +122,8 @@ https://github.com/aidswidjaja
                   href="https://discord.com/guidelines">Community
                   Guidelines.</a>
               </p>
-              <a href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank" class="btn btn-index">See our server rules</a>
+              <a href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank" class="btn btn-index">See our server
+                rules</a>
             </div>
           </div>
         </div>
@@ -144,8 +147,8 @@ https://github.com/aidswidjaja
   </div>
   <!-- Footer start -->
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
-        href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
+    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2021<br>Join us at <a
+        href="https://discord.gg/A46BgsWgjD" id="copyrightlink">discord.gg/A46BgsWgjD</a></span>
     <div class="socialnav">
       <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
           style="height: 50px;"></a>
@@ -153,7 +156,8 @@ https://github.com/aidswidjaja
           style="height: 30px;"></a>
       <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
           style="height: 45px;"></a>
-      <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
+      <a href="https://discord.gg/A46BgsWgjD"><img class="social" src="res/social/discord.svg"
+          style="height: 35px;"></a>
     </div>
   </nav>
   <!-- Footer end-->
