--- a/team.html
+++ b/team.html
@@ -19,8 +19,12 @@ https://github.com/aidswidjaja
     <meta name="theme-color" content="#fafafa">
 
     <!-- CDN: Bootstrap JQuery, Popper.js | Local: JS, CSS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
     <script src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/index.css">
@@ -32,7 +36,9 @@ https://github.com/aidswidjaja
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/backgr.css">
     <link rel="stylesheet" href="css/social/css/zocial.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body id="bod">
@@ -44,18 +50,21 @@ https://github.com/aidswidjaja
             <img src="res/lively.png" width="64" height="64" alt="Lively logo">
         </a>
 
-        <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      Menu
-    </button>
+        <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse"
+            data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <div class="navbar-nav">
                 <a class="navbar-brand" href="index.html">Lively</a>
                 <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
                 <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
-                <a id="navcolour" class="nav-item nav-link active" href="#">Team<span class="sr-only">(current)</span></a>
+                <a id="navcolour" class="nav-item nav-link active" href="#">Team<span
+                        class="sr-only">(current)</span></a>
                 <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-                <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
+                <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules"
+                    target="_blank">Server Rules</a>
                 <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
                 <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
             </div>
@@ -75,33 +84,39 @@ https://github.com/aidswidjaja
                 <div class="card cardteam">
                     <img class="teamimg" src="res/team/uproar.jpg">
                     <div class="card-body">
-                        <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/uproar" target="_blank">Uproar</a></h5>
+                        <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/uproar"
+                                target="_blank">Uproar</a></h5>
                         <h6 class="display-6 teamrole">Owner</h6>
             </li>
             <li class="team-flex-item">
                 <div class="card cardteam">
                     <img class="teamimg" src="res/team/rayn.jpg">
                     <div class="card-body">
-                        <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/raynnie" target="_blank">Rayn</a></h5>
+                        <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/raynnie"
+                                target="_blank">Rayn</a></h5>
                         <h6 class="display-6 teamrole">Manager</h6>
             </li>
         </ul>
-        </div>
-        </div>
+    </div>
+    </div>
 
 
-        <!-- Footer start -->
-        <nav class="navbar navbar-dark bg-dark">
-            <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
-        href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
-            <div class="socialnav">
-                <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png" style="height: 50px;"></a>
-                <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png" style="height: 30px;"></a>
-                <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png" style="height: 45px;"></a>
-                <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
-            </div>
-        </nav>
-        <!-- Footer end-->
+    <!-- Footer start -->
+    <nav class="navbar navbar-dark bg-dark">
+        <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2021<br>Join us at <a
+                href="https://discord.gg/A46BgsWgjD" id="copyrightlink">discord.gg/A46BgsWgjD</a></span>
+        <div class="socialnav">
+            <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
+                    style="height: 50px;"></a>
+            <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png"
+                    style="height: 30px;"></a>
+            <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
+                    style="height: 45px;"></a>
+            <a href="https://discord.gg/A46BgsWgjD"><img class="social" src="res/social/discord.svg"
+                    style="height: 35px;"></a>
+        </div>
+    </nav>
+    <!-- Footer end-->
 </body>
 
 </html>
